aux_source_directory(log/ LOG_LIST)
aux_source_directory(config/ CONFIG_LIST)
aux_source_directory(utils/ UTILS_LIST)
aux_source_directory(fiber/ FIBER_LIST)
aux_source_directory(timer/ TIMER_LIST)
aux_source_directory(hook/ HOOK_LIST)
aux_source_directory(socket/ SOCKET_LIST)
aux_source_directory(tcpserver/ TCPSERVER_LIST)
aux_source_directory(stream/ STREAM_LIST)
aux_source_directory(http/ HTTP_LIST)

add_library(phase0 SHARED ${LOG_LIST} ${UTILS_LIST} ${SRC_LIST} ${TIMER_LIST} ${HOOK_LIST} ${SOCKET_LIST} ${FIBER_LIST} ${HTTP_LIST} ${TCPSERVER_LIST} ${STREAM_LIST})
target_link_libraries(phase0 pthread)